@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Fixed
+- [API_PARSER] [HARFANGLAB] Truncate details_powershell.PowershellCommand to 16384 char (as logs can be up to 2M)
 
 
 ## [2.15.7] - 2024-07-22
